metadata/force-app/main/default/objects/CustomName_MZaub__c/CustomName_MZaub__c.object-meta.xml
<CustomObject>
    <description>Description_XwTDX</description>
    <label>CustomLabel_sRvrr</label>
    <nameField>
        <label>CustomLabel_sRvrr</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_sRvrrs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>