metadata/force-app/main/default/objects/CustomName_MZaub__c/fields/CustomField_Kyulf__c.field-meta.xml
<CustomField>
    <fullName>CustomField_Kyulf__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldWDuSH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>