metadata/force-app/main/default/objects/CustomName_MZaub__c/fields/CustomField_lXodc__c.field-meta.xml
<CustomField>
    <fullName>CustomField_lXodc__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldgvvWg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>