metadata/force-app/main/default/objects/CustomName_MZaub__c/fields/CustomField_mIiFt__c.field-meta.xml
<CustomField>
    <fullName>CustomField_mIiFt__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldjkUyA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>